Update montage and blue-shark dependencies Ticket: #17317, #17327, #17328

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "freenas-10-gui",
   "version": "0.3.0",
   "dependencies": {
-    "blue-shark": "freenas/blue-shark#268779a443937be3eb409835fa24b007829b4aa1",
+    "blue-shark": "freenas/blue-shark#6d79bf866c352bf6b75fecacfce1022cabfd47a4",
     "collections": "montagejs/collections#90210529c7b01ed373b65d4a60409f5edd36a93a",
     "d3": "^3.5.17",
     "digit": "montagejs/digit",
     "frb": "montagejs/frb#66ba657ae8e7ada7658df3beb6e924c500b7259c",
-    "montage": "montagejs/montage#131a17f19b6c76c1586a8c3f8ff6055ffab4b88a",
+    "montage": "freenas/montage#b06ac8347164eed9881e5f6bc420129abf2c7bb1",
     "montage-data": "montagestudio/montage-data#647f5208fcefbc89c405d1afea205c8184fddeda",
     "plottable": "^2.2.0",
     "validators": "~0.3.1",
