update montage and mop dependencies.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "d3": "^3.5.17",
     "digit": "montagejs/digit",
     "frb": "montagejs/frb#66ba657ae8e7ada7658df3beb6e924c500b7259c",
-    "montage": "freenas/montage#b06ac8347164eed9881e5f6bc420129abf2c7bb1",
+    "montage": "montagejs/montage#92c3b4be092be59b75ac583fbc555302ee35e2a0",
     "montage-data": "montagestudio/montage-data#647f5208fcefbc89c405d1afea205c8184fddeda",
     "plottable": "^2.2.0",
     "validators": "~0.3.1",
@@ -26,7 +26,7 @@
     "js-beautify": "^1.6.3",
     "json.sortify": "^2.0.2",
     "montage-testing": "~0.4.0",
-    "mop": "montagejs/mop#6050d3a6c5618eaf354798eba82939a40761951f",
+    "mop": "montagejs/mop#dc468f661b68b7bf6fb3b01fcee64b0c4adbcf1b",
     "mr": "montagejs/mr#53633e56f3e9d00c5a311d993098ddd89ed9be80",
     "postcss-cssnext": "^2.7.0",
     "postcss-discard-comments": "^2.0.4",
