--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-newer": "^1.2.0",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
+    "gulp-typescript": "^3.1.3",
     "js-beautify": "^1.6.3",
     "json.sortify": "^2.0.2",
     "montage-testing": "~0.4.0",
@@ -34,6 +35,7 @@
     "progress": "~1.1.8",
     "prompt": "~0.3.0",
     "rimraf": "~2.5.2",
+    "typescript": "^2.0.10",
     "ws": "~1.1.1"
   },
   "exclude": [
