--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "freenas-10-gui",
   "version": "0.3.0",
   "dependencies": {
-    "blue-shark": "freenas/blue-shark#9e7b7f345e1e883f5498de20609766fbc9478e1a",
+    "blue-shark": "freenas/blue-shark#5a24016ad53c48a756e40f282f3b6e958649b989",
     "collections": "montagejs/collections#90210529c7b01ed373b65d4a60409f5edd36a93a",
     "d3": "^3.5.17",
     "digit": "montagejs/digit",
     "frb": "montagejs/frb#66ba657ae8e7ada7658df3beb6e924c500b7259c",
-    "montage": "montagejs/montage#d8936b90fafb3a1d9bc01ff8924208513418b408",
+    "montage": "freenas/montage#b4aca1c14b5671e76d1ab42abfdfcdca2dc4410b",
     "montage-data": "montagestudio/montage-data#647f5208fcefbc89c405d1afea205c8184fddeda",
-    "plottable": "~2.2.0",
+    "plottable": "~2.5.0",
     "validators": "~0.3.1",
     "xterm": "^1.0.0",
     "maphilight": "~1.2.3"
