--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
     "compilerOptions": {
         "target": "es5",
         "lib": ["es6", "dom"],
-        "types": ["reflect-metadata"],
+        "types": [
+            "prouter"
+        ],
         "module": "commonjs",
         "moduleResolution": "node",
         "experimentalDecorators": true,
