--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
+        "emitDecoratorMetadata": true,
+        "sourceMap": true
     },
     "exclude": [
         "**/node_modules"
