--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "freenas-10-gui",
     "version": "10.0.0-BETA2",
     "dependencies": {
-        "blue-shark": "freenas/blue-shark#66c1ebb13c3ef9afb418d23309f044dd625269d6",
+        "blue-shark": "joshuarule/blue-shark#e3bc005a123f81eda7e276af943f7a7f96577457",
         "bytes": "^2.4.0",
         "change-case": "^3.0.0",
         "collections": "montagejs/collections#90210529c7b01ed373b65d4a60409f5edd36a93a",
@@ -15,21 +15,20 @@
         "lodash": "^4.17.2",
         "maphilight": "~1.2.3",
         "moment-timezone": "^0.5.11",
-        "montage": "freenas/montage#9d75a5cced0b80b9370de5e9fe2ef0d45d3dfd8e",
+        "montage": "freenas/montage#fe6b9a704278d089f95e037bfdf1f3c06c694d6d",
         "montage-data": "montagestudio/montage-data#647f5208fcefbc89c405d1afea205c8184fddeda",
+        "node-uuid": "^1.4.7",
         "plottable": "~2.5.0",
         "redux": "^3.6.0",
         "systemjs": "^0.19.41",
         "systemjs-plugin-json": "^0.2.2",
-        "uuid": "^3.0.1",
         "validators": "~0.3.1",
         "xterm": "^1.0.0"
     },
     "redirects": {
         "redux": "redux/dist/redux.min.js",
         "bytes": "bytes/index.js",
-        "bluebird": "node_modules/montage/node_modules/bluebird/js/browser/bluebird.min.js",
-        "uuid": "bin/vendors/uuid/index.js"
+        "bluebird": "node_modules/montage/node_modules/bluebird/js/browser/bluebird.min.js"
     },
     "devDependencies": {
         "browser-sync": "^2.13.0",
@@ -58,9 +57,6 @@
         "stylelint": "^7.6.0",
         "tslint": "^4.2.0",
         "typescript": "^2.1.0",
-        "vinyl-named": "^1.1.0",
-        "webpack": "^2.2.0-rc.4",
-        "webpack-stream": "^3.2.0",
         "ws": "~1.1.1"
     },
     "scripts": {
