--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "freenas-10-gui",
     "version": "10.0.0-BETA2",
     "dependencies": {
-        "blue-shark": "joshua/blue-shark#modal-refactor",
+        "blue-shark": "freenas/blue-shark#0d3a667d5a9d5b89a7ee796bd7b32eca031811d3",
         "bytes": "^2.4.0",
         "change-case": "^3.0.0",
         "collections": "montagejs/collections#90210529c7b01ed373b65d4a60409f5edd36a93a",
