Clean typescript code

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "freenas-10-gui",
     "version": "10.0.0-BETA2",
     "dependencies": {
-        "blue-shark": "freenas/blue-shark#877ddbdbec38d69ce3aaabbad5ad6f4b2ee968b3",
+        "blue-shark": "freenas/blue-shark",
         "bytes": "^2.4.0",
         "change-case": "^3.0.0",
         "collections": "montagejs/collections#90210529c7b01ed373b65d4a60409f5edd36a93a",
