--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "freenas-10-gui",
   "version": "10.0.0-BETA2",
   "dependencies": {
-    "blue-shark": "freenas/blue-shark",
+    "blue-shark": "freenas/blue-shark#66c1ebb13c3ef9afb418d23309f044dd625269d6",
     "bytes": "^2.4.0",
     "change-case": "^3.0.0",
     "collections": "montagejs/collections#90210529c7b01ed373b65d4a60409f5edd36a93a",
@@ -59,6 +59,7 @@
     "prompt": "~0.3.0",
     "rimraf": "~2.5.2",
     "stylelint": "^7.6.0",
+    "stylelint-declaration-strict-value": "^1.0.3",
     "tslint": "^4.2.0",
     "typescript": "^2.1.0",
     "vinyl-named": "^1.1.0",
