fix share directory creation Ticket: 21489

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "uuid": "^3.0.1",
     "validators": "~0.3.1",
     "xterm": "^1.0.0",
-    "smoothscroll-polyfill": "^0.3.4"
+    "smoothscroll-polyfill": "^0.3.4",
+    "url-join": "^1.1.0"
   },
   "redirects": {
     "redux": "redux/dist/redux.min.js",
