--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freenas-10-gui",
-  "version": "10.0.0-BETA2",
+  "version": "10.0.2-RELEASE",
   "dependencies": {
     "blue-shark": "freenas/blue-shark#secret_stable",
     "bytes": "^2.4.0",
